--- a/app/assets/stylesheets/color.sass
+++ b/app/assets/stylesheets/color.sass
@@ -17,8 +17,9 @@ $color-green-0: #1C7200
 $color-green-1: #219800
 $color-green-2: #68A127
 $color-green-3: #7CC02F
+$color-green-4: #7CC09B
 $color-green-5: #EFFFED
-$greens: (0: #1C7200, 1: #219800, 2: #68A127, 3: #7CC02F, 5: #EFFFED)
+$greens: (0: #1C7200, 1: #219800, 2: #68A127, 3: #7CC02F, 4: #7CC09B, 5: #EFFFED)
 
 $color-red-1: #B40D0D
 $color-red-2: #CC0000
