--- a/app/assets/stylesheets/emails.css
+++ b/app/assets/stylesheets/emails.css
@@ -1,7 +1,7 @@
 * {
 margin: 0;
 padding: 0;
-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+font-family: "Avenir", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 font-size: 100%;
 line-height: 1.6;
 }
