table button style

--- a/app/assets/stylesheets/_homepage.sass
+++ b/app/assets/stylesheets/_homepage.sass
@@ -161,7 +161,7 @@ section.video-promo, section.newsletter, section.press, section.forgot-password,
         border: 0
         margin-bottom: .75rem
         color: $color-white !important
-      input:focus, #user_password
+      input:focus
         background-color: $color-green-4
         color: $color-white !important
 
