--- a/app/assets/stylesheets/_tables.sass
+++ b/app/assets/stylesheets/_tables.sass
@@ -97,5 +97,9 @@ i.missing_grade
       font-size: .7rem
 
   tbody ul.button-bar li a.button
+    display: block
+    border-radius: $global-radius
     padding: 2px 5px
     white-space: nowrap
+    line-height: 1.2rem
+    margin-bottom: .2rem !important
