--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -61,6 +61,7 @@ $media-xlarge-max:  120rem; //
 @import 'breadcrumbs';
 @import 'buttons_and_icons';
 @import 'datepicker';
+@import 'debug';
 @import 'collapse';
 @import 'context_menu';
 @import 'forms';
