--- a/app/views/grades/_standard_edit.html.haml
+++ b/app/views/grades/_standard_edit.html.haml
@@ -77,11 +77,11 @@
           %section
             #awarded(ng-cloak)
               = render partial: "grades/standard_edit/badges_awarded"
-              .clear-left
+              .clear
 
             #available.empty(ng-cloak)
               = render partial: "grades/standard_edit/badges_available"
-              .clear-left
+              .clear
 
           .panel(ng-if="debug" ng-cloak)
             .badge-debug(ng-repeat="badge in badges" ng-class="{creating: badge.creating, deleting: badge.deleting}")
