--- a/app/assets/stylesheets/_tabs.sass
+++ b/app/assets/stylesheets/_tabs.sass
@@ -10,11 +10,16 @@
     th:first-child th:first-child, th:first-child th:last-child
       border-top-right-radius: 0
 
+.ui-tabs
+  padding: 0 !important
+
 .ui-widget-content
-  border: 0
+  border: 1px solid $color-grey-4
+  border-radius: $global-radius
+  font-family: "Avenir", Helvetica, sans-serif
   
   .ui-tabs-panel
-    padding: 0
+    padding: .5rem
 
     .button-group a
       color: $color-white
@@ -26,12 +31,15 @@
   border: 0
 
 .ui-tabs .ui-tabs-nav
-  background: $color-blue-0 !important
+  border-radius: $global-radius !important
+  background: $color-blue-1 !important
   border-bottom: 10px solid $color-blue-0
 
   li.ui-state-default
-    background: $color-green-2 !important
+    background: $color-green-3 !important
     border: 0
+    a 
+      color: $color-white !important
 
     &:hover
       background: $color-green-2 !important
