--- a/app/assets/stylesheets/_forms.sass
+++ b/app/assets/stylesheets/_forms.sass
@@ -31,7 +31,7 @@ select, .ui-tabs-panel select
   font-size: 12px
 
 select:hover
-  background-color: $color-blue-4
+  background-color: $color-grey-4
 
 .dropdown-menu
   position: absolute
