Fix topbar responsiveness, badge hover labels

--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -169,6 +169,10 @@ a:hover + .display_on_hover
       display: block
       clear: both
 
+.hover-style.right
+  position: absolute
+  margin-left: -240px
+
 @media (min-width: 1072px)
   .panel .row
     margin-bottom: 1rem
