--- a/app/views/students/sidebar/_sidebar_badges.haml
+++ b/app/views/students/sidebar/_sidebar_badges.haml
@@ -11,22 +11,22 @@
                 - if badge.is_unlocked_for_student?(current_student)
                   %a
                     %img{:src => badge.icon, :alt => "You've earned the #{badge.name} badge", :class => "earned" }
-                  .display_on_hover.hover-style
+                  .display_on_hover.hover-style.right
                     %i.fa.fa-unlock-alt= " #{badge.name}, #{badge.point_total} points"
                 - else
                   %a
                     %img{:src => badge.icon, :alt => "You've earned the #{badge.name} badge", :class => "earned" }
-                  .display_on_hover.hover-style
+                  .display_on_hover.hover-style.right
                     %i.fa.fa-lock= " #{badge.name}, #{badge.point_total} points"
               - else
                 %a
                   %img{:src => badge.icon, :alt => "You've earned the #{badge.name} badge", :class => "earned" }
-                .display_on_hover.hover-style
+                .display_on_hover.hover-style.right
                   ="#{badge.name}, #{badge.point_total} points"
             - else
               %a
                 %img{:src => badge.icon, :alt => "You've earned the #{badge.name} badge", :class => "earned"}
-              .display_on_hover.hover-style
+              .display_on_hover.hover-style.right
                 = "#{badge.name}"
 
       - current_student.student_visible_unearned_badges(current_course).each do |badge|
@@ -34,7 +34,7 @@
           %li
             %a
               %img{:src => badge.try(:icon), :alt => "#{badge.try(:name)}", :class => "unearned"}
-            .display_on_hover.hover-style
+            .display_on_hover.hover-style.right
               = "Not yet earned: #{badge.name}"
 
     - if current_student.earned_badge_score > 0
