Using CSS to hide extra title text rather than truncating

--- a/app/assets/stylesheets/_predictor.sass
+++ b/app/assets/stylesheets/_predictor.sass
@@ -240,7 +240,9 @@ article.predictor-article
   background-color: $color-blue-0
   color: $txt-color-inverse
   padding: 3px 0 0 .5rem
+  overflow: hidden
   height: 2rem
+  line-height: 2rem
   font-size: $predictor-font-size-3
 
 .predictor-article-icons
