Remove extra font awesome file, badges opacity on hover

--- a/app/assets/stylesheets/_student_sidebar.sass
+++ b/app/assets/stylesheets/_student_sidebar.sass
@@ -65,6 +65,8 @@
       margin-bottom: .5rem
       img
         width: 100%
+      img:hover
+        opacity: 1 !important
 
 /* Styles the hover state on the box plot on the student dashboard */
 .jqstooltip
