Styling colors on sidebar, fixed broken link on auth page

--- a/app/assets/stylesheets/_student_sidebar.sass
+++ b/app/assets/stylesheets/_student_sidebar.sass
@@ -54,6 +54,9 @@
     .button:hover
       background-color: $color-blue-3
 
+    .assignment-name a:hover
+      color: $color-green-3
+
   ul.block-grid
     margin: 0.5rem auto !important
     width: 100%
