--- a/app/views/pages/auth_failure.html.haml
+++ b/app/views/pages/auth_failure.html.haml
@@ -5,7 +5,7 @@
 
     %p Are you sure you've created your GradeCraft account? Students <b>must</b> log in through CTools/Canvas before they can access GradeCraft directly. 
 
-    %p #{ link_to 'Follow these directions', "http://gradecraft.freshdesk.com/support/home"} to create your GradeCraft account, and #{mail_to 'cholma@umich.edu', 'get in touch'} if that doesn't work.
+    %p #{ link_to 'Follow these directions', "http://help.gradecraft.com/"} to create your GradeCraft account, and #{mail_to 'cholma@umich.edu', 'get in touch'} if that doesn't work.
   
   .columns.login-form.login.half
     = render 'user_sessions/form'
