--- a/app/views/users/activate.html.haml
+++ b/app/views/users/activate.html.haml
@@ -1,10 +1,16 @@
-%section.new-password
-  %h5 Welcome to GradeCraft
-  %p Enter a password and a confirmation below to complete your account
-  = simple_form_for @user, :url => activate_user_path(@token), :method => :post do |f|
-    = hidden_field_tag :token, @token
-    = f.label :password
-    = f.password_field :password
-    = f.label :password_confirmation
-    = f.password_field :password_confirmation
-    = f.submit "Activate Your Account", :class => "button"
+.homepage
+  .press-container
+    %br
+    %br
+    %h3.pagetitle Welcome to GradeCraft
+
+    .pageContent
+      %section.new-password
+        %p Enter a password and a confirmation below to complete your account
+        = simple_form_for @user, :url => activate_user_path(@token), :method => :post do |f|
+          = hidden_field_tag :token, @token
+          = f.label :password
+          = f.password_field :password
+          = f.label :password_confirmation
+          = f.password_field :password_confirmation
+          = f.submit "Activate Your Account", :class => "button"
