--- a/app/views/users/import.html.haml
+++ b/app/views/users/import.html.haml
@@ -17,3 +17,7 @@
   = form_tag({:action => :upload}, :multipart => true) do
     = file_field_tag 'file'
     = submit_tag("Import")
+
+  - if current_user_is_admin?
+
+    %h4 K-12 Import: Import as activated accounts with passwords
