--- a/app/views/assignments/group/_group_show.haml
+++ b/app/views/assignments/group/_group_show.haml
@@ -1,7 +1,10 @@
 = form_tag edit_status_grades_assignment_path(@assignment) do
-  %table
-    %thead= render "assignments/group/table_head"
-    %tbody= render "assignments/group/table_body"
-    .right
-      - if @assignment.release_necessary? && @assignment.grades.present?
-        = submit_tag "Update Grade Statuses", :class => "button"
+  - if ! @groups.present?
+    No #{term_for :groups} have been created! You can either have #{term_for :students} self-create their #{term_for :groups}, or you can create them manually <a href ="/groups/new">here</a>. 
+  - else 
+    %table
+      %thead= render "assignments/group/table_head"
+      %tbody= render "assignments/group/table_body"
+      .right
+        - if @assignment.release_necessary? && @assignment.grades.present?
+          = submit_tag "Update Grade Statuses", :class => "button"
