--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -21,25 +21,18 @@
   = render 'layouts/alerts'
   
   - if @group.approved?
-    .alert-box.alert.success
-      %i.fa.fa-check
+    .alert-box.success
+      %i.fa.fa-check.fa-fw
       = "Status: #{@group.approved}"
   - elsif @group.rejected?
-    %i.fa.fa-times-cirlce
+    %i.fa.fa-times-circle.fa-fw
     .alert-box.alert= "Status: #{@group.approved}"
   - else
-    .alert-box.alert.notice
-      %i.fa.fa-flag
+    .alert-box.notice
+      %i.fa.fa-flag.fa-fw
       %span.bold Status: Pending
       This #{term_for :group} must be approved by your instructor before you can proceed
-        
       
-
-  %h4 #{term_for :assignments}:
-  %ul
-    - @group.assignment_groups.each do |ag|
-      %li= link_to ag.assignment.name, ag.assignment
-
   %h4
     Members:
   %ul
@@ -47,7 +40,14 @@
       - if current_user_is_staff?
         %li= link_to gm.student.name, student_path(gm.student)
       - else
-        %li= gm.student.name
+        %li= gm.student.name  
+      
+
+  %h4 #{term_for :assignments}:
+  %ul
+    - @group.assignment_groups.each do |ag|
+      %li= link_to ag.assignment.name, ag.assignment
+
 
   - if @group.text_feedback?
     %h4 Instructor Feedback:
