--- a/app/views/assignments/group/_table_head.html.haml
+++ b/app/views/assignments/group/_table_head.html.haml
@@ -1,10 +1,8 @@
 %tr
-  %th= current_course.group_term
+  %th{:width => "20%"} #{term_for :group} Name
+  %th{:style => "min-width: 200px"}= "#{current_course.user_term}s"
   %th Status
-  %th First Name
-  %th Last Name
   %th Score
-  %th Read?
   - if @assignment.assignment_type.student_weightable?
     %th Multiplied Scores
   - if @assignment.has_levels?
