--- a/app/assets/stylesheets/_badges.sass
+++ b/app/assets/stylesheets/_badges.sass
@@ -16,3 +16,264 @@
 .badge-icon
   width: 80%
   max-width: 100px
+
+button#remove-badges, button#add-badges
+  margin-left: .5rem
+  position: relative
+  margin-top: 0rem
+  top: -.3rem
+  @include transition-property("background, opacity")
+  @include transition-duration(0.3s)
+  @include transition-timing-function(ease)
+
+.grade-badge, .badge-table
+  &.hexagon
+    @include transition-property("background, opacity")
+    @include transition-duration(0.6s)
+    @include transition-timing-function(ease)
+    cursor: pointer
+    cursor: hand
+
+    position: relative
+    width: 80px
+    height: 36px
+    float: left
+    z-index: 100
+    margin: 2rem 4rem 3rem 2rem
+
+    &.available
+      background-color: $color-blue-1
+
+    &.awarded
+      background-color: $color-green-1
+
+    &:before, &:after
+      content: ""
+      position: absolute
+      z-index: 1
+      width: 59px
+      height: 59px
+      -webkit-transform: scaleY(0.5774) rotate(-45deg)
+      -ms-transform: scaleY(0.5774) rotate(-45deg)
+      transform: scaleY(0.5774) rotate(-45deg)
+      background-color: $color-blue-2
+      left: 10.75px
+
+    &:before
+      top: -29.76px
+
+    &:after
+      bottom: -53.0330px
+
+    &.unearned 
+      @include opacity(0.6)
+      background-color: #555
+
+    &.unearned:before, &.unearned:after
+      background-color: #555
+
+    &:hover
+      background-color: $color-blue-1
+      @include opacity(0.7)
+
+      &:before, &:after
+        background-color: $color-blue-1
+
+
+    &.unearned:hover, &.unearned:before:hover, &.unearned:after:hover
+      background-color: $color-blue-1
+      @include opacity(0.88)
+      box-shadow: 0 0 20px #F6C621
+
+    &.available.earned
+      @include opacity(0)
+
+    &.awarded.unearned
+      @include opacity(0)
+
+    &.available, &.awarded
+      &.hide-after-fade, &.temp-hide
+        display: none !important
+
+    &.available.unearned-active
+      transition:1s linear all
+      box-shadow: 0 0 120px #F6C621
+      opacity:0.92
+
+    &.awarded.earned-active
+      transition:1.5s linear all
+      box-shadow: 0 0 150px #FFD017
+      opacity:0.95
+
+    &.fade-in-available
+      @include opacity(0.8)
+      @include transition-property("opacity")
+      @include transition-duration(2s)
+      @include transition-timing-function(ease)
+
+    &.fade-in-awarded
+      @include opacity(1)
+      @include transition-property("opacity")
+      @include transition-duration(2s)
+      @include transition-timing-function(ease)
+
+    span
+      display: block
+      position: absolute
+      top: 0.5773502691896257px
+      left: 0
+      width: 90px
+      height: 55.4478px
+      z-index: 2
+      background: inherit
+
+  .ribbon
+    width: 100px
+    position: relative 
+    margin-top: 38px
+    margin-left: -10px
+    text-align: center
+    font-size: 12px !important
+    z-index: 100
+    background: $color-red-1
+    background: -webkit-gradient(linear, left top, left bottom, from(#d64b4b), to(#ab2c2c))
+    background: -webkit-linear-gradient(top, #d64b4b, #ab2c2c)
+    background: -moz-linear-gradient(top, #d64b4b, #ab2c2c)
+    background: -ms-linear-gradient(top, #d64b4b, #ab2c2c)
+    background: -o-linear-gradient(top, #d64b4b, #ab2c2c)
+    background-image: -ms-linear-gradient(top, #d64b4b 0%, #ab2c2c 100%)
+    -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 1px
+    -moz-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 1px
+    box-shadow: rgba(0, 0, 0, 0.3) 0 1px 1px
+    h1
+      font-size: 14px !important
+      margin-top: 50px
+      color: #590000
+      text-shadow: #d65c5c 0 1px 0
+      margin: 0px
+      padding: 2px 10px
+
+  .ribbon-ends
+    position: relative
+    z-index: 20
+    bottom: 7
+    @include opacity(0.8)
+    &:before, &:after
+      content: ''
+      position: absolute
+      display: block
+      bottom: -1em
+      border: 1em solid #c23a3a
+      z-index: 1
+    &:before
+      left: -2.5em
+      border-right-width: 1.5em
+      border-left-color: transparent
+      -webkit-box-shadow: rgba(0, 0, 0, 0.4) 1px 1px 1px
+      -moz-box-shadow: rgba(0, 0, 0, 0.4) 1px 1px 1px
+      box-shadow: rgba(0, 0, 0, 0.4) 1px 1px 1px
+    &:after
+      right: -2.5em
+      border-left-width: 1.5em
+      border-right-color: transparent
+      -webkit-box-shadow: rgba(0, 0, 0, 0.4) -1px 1px 1px
+      -moz-box-shadow: rgba(0, 0, 0, 0.4) -1px 1px 1px
+      box-shadow: rgba(0, 0, 0, 0.4) -1px 1px 1px
+
+  .ribbon-stitches-top
+    z-index: 2410
+    margin-top: -2px
+    border-top: 1px dashed rgba(0, 0, 0, 0.2)
+    -moz-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5)
+    -webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5)
+    box-shadow: 0px 0px 2px rgba(255, 255, 255, 0.5)
+
+  .ribbon-stitches-bottom
+    z-index: 2410
+    margin-bottom: 2px
+    border-top: 1px dashed rgba(0, 0, 0, 0.2)
+    -moz-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3)
+    -webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3)
+    box-shadow: 0px 0px 2px rgba(255, 255, 255, 0.3)
+
+  img.earned, img.unearned
+    max-height: 5rem
+    margin: 0 auto
+    z-index: 80
+    position: absolute
+    margin: -14px 0 0 2px
+
+  .available
+    opacity: .5
+
+  .badge-name
+    font-weight: bold
+    margin-top: 20px
+    position: absolute
+    font-size: 1rem
+    text-align: center
+    vertical-align: top
+    margin-top: 20px
+    bottom: -30px
+    z-index: 2200
+    width: 100%
+
+  .earned-box
+    position: absolute
+    top: 0
+    right: 4px
+    font-weight: bold
+    color: $color-black
+    text-align: center
+    width: 100%
+    font-size: 0.9rem
+    margin-top: -12px
+    z-index: 2200
+
+    width: 35px
+    height: 35px
+
+    &.unearned
+      background: $color-grey-6
+      display: none
+
+  .gold-stars
+    position: absolute
+    top: -11px
+    right: -20px
+    font-size: 2rem
+    color: $color-yellow-1
+    z-index: 100 !important
+
+    i.fa-fw
+      z-index: 800 !important
+
+
+  &.unearned
+    .gold-stars
+      @include opacity(0.6)
+
+  .badges-earned
+    @include ribbon
+
+  &.unearned
+    .badges-earned
+      background-color: $color-grey-6
+      background-repeat: repeat-x
+      background-image: -khtml-gradient(linear, left top, left bottom, from($color-grey-2), to($color-grey-6))
+      background-image: -moz-linear-gradient(top, $color-grey-2, $color-grey-6)
+      background-image: -ms-linear-gradient(top, $color-grey-2, $color-grey-6)
+      background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, $color-grey-6), color-stop(100%, $color-grey-6))
+      background-image: -webkit-linear-gradient(top, $color-grey-2, $color-grey-6)
+      background-image: -o-linear-gradient(top, $color-grey-2, $color-grey-6)
+      background-image: linear-gradient(top, $color-grey-2, $color-grey-6)
+      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$color-grey-2', endColorstr='$color-grey-6', GradientType=0)
+      &:after
+        border-color: $color-grey-6 $color-grey-6 transparent $color-grey-6
+
+  .earned-total
+    display: inline
+    position: absolute
+    margin-top: -4px
+    font-size: 1rem
+    font-weight: bold
