--- a/app/assets/stylesheets/_buttons_and_icons.sass
+++ b/app/assets/stylesheets/_buttons_and_icons.sass
@@ -24,6 +24,8 @@
   margin-top: 1rem
   position: relative
   height: 1rem
+  font-family: "Avenir", Helvetica, sans-serif !important
+  font-size: .8rem !important
   white-space: nowrap
 
   ul
@@ -46,7 +48,7 @@
       margin-left: 0rem
       a
         display: block
-        padding: .4rem .5rem
+        padding: .5rem .5rem
 
 thead
   .button
