--- a/app/views/students/badges.html.haml
+++ b/app/views/students/badges.html.haml
@@ -4,59 +4,35 @@
   = render 'layouts/alerts'
 
   //student badges table
-  %table
-    %thead
-      %th.center
-        .sr-only Icon
-      %th Earned
-      %th{ :width => 300} Description
-    %tbody
-      - @badges.each do |badge|
-        %tr
-          %td.center
-            %img{ :src => badge.icon, :alt => badge.name, :width => "100" }
-            .bold= badge.name
-            = "#{points badge.point_total} points" if badge.point_total?
-          %td
-            -# logic for badges that have actually been earned
-            - if @earned_badges_by_badge_id[badge.id]
-              -# logic for badges that can be earned multiple times
-              - if badge.can_earn_multiple_times
-                - @earned_badges_by_badge_id[badge.id].each do |earned_badge|
-                  %img{ :src => badge.icon, :alt => badge.name, :width => "30" }
-                  = earned_badge.created_at
-                  %p= raw earned_badge.try(:feedback)
+  - if @earned_badges.present?
+    %h4= "Earned #{term_for :badges}" 
+    - @earned_badges.each do |earned_badge|
+      -# logic for badges that have actually been earned
+      - if @earned_badges_by_badge_id[earned_badge.id]
+        .badge-table.hexagon.awarded
+          %img.earned{ :src => earned_badge.icon, :alt => earned_badge.name }
 
-                - if @earned_badges_by_badge_id[badge.id].size > 1
-                  = "#{@earned_badges_by_badge_id[badge.id].collect(&:score).reduce(:+)} points earned" if badge.point_total?
-              - elsif @earned_badges_by_badge_id[badge.id].any?
-                -# logic for badges that can be earned only once
-                .fa.fa-check
-                = @earned_badges_by_badge_id[badge.id].first.created_at
-                %p= raw @earned_badges_by_badge_id[badge.id].first.try(:feedback)
-            - else
-              %span
-          %td
-            - if badge.badge_files.present?
-              %b Attachments:
-              %ul
-                - badge.badge_files.each do |bf|
-                  %li
-                    = link_to bf.filename, bf.url
-            - if badge.is_unlockable?
-              %a
-                %i.fa.fa-lock
-              .display_on_hover.hover-style
-                %h3 Unlock Requirements
-                %ul
-                  - badge.unlock_conditions.each do |condition|
-                    %li= "#{condition.name} must be #{condition.condition_state}"
-            - if badge.is_a_condition?
-              %a
-                %i.fa.fa-key
-              .display_on_hover.hover-style
-                %h3 Unlock Key
-                %ul
-                  - badge.unlock_keys.each do |key|
-                    %li= "#{key.unlockable.name} is unlocked by #{key.condition_state} #{key.condition.name}"
-            %span= raw badge.description
+          .ribbon
+            .ribbon-stitches-top
+            %strong.ribbon-content
+              %h1= earned_badge.name
+            .ribbon-stitches-bottom
+          .ribbon-ends
+          .gold-stars
+            %i.fa.fa-star.fa-fw
+            .badges-earned.blue
+  - if @unearned_badges.present?
+    %h4= "Possible #{term_for :badges}"
+    - @unearned_badges.each do |unearned_badge|
+      .badge-table.hexagon.available
+        %img.unearned{ :src => unearned_badge.icon, :alt => unearned_badge.name }
+
+        .ribbon
+          .ribbon-stitches-top
+          %strong.ribbon-content
+            %h1= unearned_badge.name
+          .ribbon-stitches-bottom
+        .ribbon-ends
+        .gold-stars
+          %i.fa.fa-star.fa-fw
+          .badges-earned.blue
