--- a/app/views/users/edit_profile.html.haml
+++ b/app/views/users/edit_profile.html.haml
@@ -6,47 +6,48 @@
   = render partial: 'layouts/alerts', locals: { model: @user, term: "profile" }
 
   = simple_form_for(@user, method: :put, :url => update_profile_users_path) do |f|
+    %section
 
-    .form-item
-      %label.bold Your Avatar
-      - if @user.avatar_file_name.present?
-        %img{:src => @user.avatar_file_name, :width => 200, :height => 200 }
-      .form_label
+      .form-item
+        %label.bold Your Avatar
+        - if @user.avatar_file_name.present?
+          %img{:src => @user.avatar_file_name, :width => 200, :height => 200 }
         = f.file_field :avatar_file_name
 
-    - if ! @user.kerberos_uid.present?
+      - if ! @user.kerberos_uid.present?
+        .form-item
+          = f.label :password
+          = f.password_field :password, :as => :password
+        .form-item
+          = f.label :password_confirmation
+          = f.password_field :password_confirmation, :as => :password
+
+      - if @user.is_student?(current_course)
+        - if current_course.teams_visible? && (current_course.in_team_leaderboard? || (current_student.team_for_course(current_course).present? && current_student.team_for_course(current_course).in_team_leaderboard?)) || current_course.character_names?
+          .form-item
+            = f.label :display_name, "Pseudonym"
+            = f.text_field :display_name
+            .form-item What would you like your name to be on the leaderboards?
+        - if current_course.team_roles?
+          .form-item
+            = f.label :team_role, "#{term_for :team} Role"
+            = f.input :team_role, :input_html => { :maxlength => 255 }, :label => false
+            .form_label What will you contribute to your #{term_for :team}?
+
+        - if current_course.character_profiles?
+          .form-item
+            = f.simple_fields_for :course_memberships, @course_membership do |p|
+              = p.label :character_profile
+              .form_label What's the background of your character in this class? What skills do you have and what are you motivated by?
+              = p.input :character_profile, :label => false
+
       .form-item
-        = f.label :password
-        = f.password_field :password, :as => :password
-      .form-item
-        = f.label :password_confirmation
-        = f.password_field :password_confirmation, :as => :password
-
-    - if @user.is_student?(current_course)
-      - if current_course.teams_visible? && (current_course.in_team_leaderboard? || (current_student.team_for_course(current_course).present? && current_student.team_for_course(current_course).in_team_leaderboard?)) || current_course.character_names?
-        .form-item
-          = f.label :display_name, "Pseudonym"
-          = f.text_field :display_name
-          .form-item What would you like your name to be on the leaderboards?
-      - if current_course.team_roles?
-        .form-item
-          = f.label :team_role, "#{term_for :team} Role"
-          = f.input :team_role, :input_html => { :maxlength => 255 }, :label => false
-          .form_label What will you contribute to your #{term_for :team}?
-
-      - if current_course.character_profiles?
-        .form-item
-          = f.simple_fields_for :course_memberships, @course_membership do |p|
-            = p.label :character_profile
-            .form_label What's the background of your character in this class? What skills do you have and what are you motivated by?
-            = p.input :character_profile, :label => false
-
-    .form-item
-      = f.input :default_course_id, :collection => (@default_course_options)
-      .form_label This course will be automatically loaded when you log in to GradeCraft
+        = f.input :default_course_id, :collection => (@default_course_options)
+        .form_label This course will be automatically loaded when you log in to GradeCraft
 
 
-    .submit-buttons
-      %ul
-        %li= submit_tag 'Update Settings', :class => 'button'
-        %li= link_to 'Cancel', root_path, :class => 'button'
+      .submit-buttons
+        %ul
+          %li= submit_tag 'Update Settings', :class => 'button'
+          %li= link_to 'Cancel', root_path, :class => 'button'
+      %br
