bkg on alerts for homepage

--- a/app/assets/stylesheets/_homepage.sass
+++ b/app/assets/stylesheets/_homepage.sass
@@ -11,6 +11,13 @@ section.features
   margin: 2.5rem 1rem
   width: 100%
 
+.alert-bkg
+  width: 100% !important
+  margin: -1rem 0
+  padding: 1rem 0
+  opacity: .8
+  background-color: $color-blue-3
+
 .video-container, .newsletter-container, .press-container
   width: 100% !important
   margin: 0
