Adding number ribbons

--- a/app/views/grades/standard_edit/_badges_available.html.haml
+++ b/app/views/grades/standard_edit/_badges_available.html.haml
@@ -15,4 +15,5 @@
     .ribbon-ends
     .gold-stars
       %i.fa.fa-star.fa-fw
-      .badges-earned.blue {{badge.earnedBadgesForGrade.length + badge.otherEarnedBadges.length}}
+      .badges-earned.blue 
+        .earned-count {{badge.earnedBadgesForGrade.length + badge.otherEarnedBadges.length}}
