--- a/app/views/grades/standard_edit/_badges_awarded.html.haml
+++ b/app/views/grades/standard_edit/_badges_awarded.html.haml
@@ -16,4 +16,5 @@
     .ribbon-ends
     .gold-stars
       %i.fa.fa-star.fa-fw
-      .badges-earned.blue {{badge.totalEarnedBadges()}}
+      .badges-earned.blue 
+        .earned-count {{badge.totalEarnedBadges()}}
