--- a/app/assets/stylesheets/_badges.sass
+++ b/app/assets/stylesheets/_badges.sass
@@ -26,6 +26,22 @@ button#remove-badges, button#add-badges
   @include transition-duration(0.3s)
   @include transition-timing-function(ease)
 
+.badge-card
+  display: none
+
+.badge-info:hover 
+  position: fixed
+  background-color: $color-green-3
+  border-radius: $global-radius
+  width: 18rem
+  height: 7rem
+  padding: 0 1rem 1rem 0
+  z-index: 1000
+  .badge-card
+    float: right
+    display: inline
+    font-size: .7rem
+
 .grade-badge, .badge-table
   &.hexagon
     @include transition-property("background, opacity")
