Styling badge page

--- a/app/assets/stylesheets/_badges.sass
+++ b/app/assets/stylesheets/_badges.sass
@@ -30,7 +30,7 @@ button#remove-badges, button#add-badges
   display: none
 
 .badge-info:hover 
-  position: fixed
+  position: absolute
   background-color: $color-green-3
   border-radius: $global-radius
   width: 18rem
