--- a/app/views/grades/analytics/_individual_analytics.haml
+++ b/app/views/grades/analytics/_individual_analytics.haml
@@ -12,10 +12,10 @@
       %span.small_uppercase High Score:
       = points presenter.assignment.high_score
 
-  - if presenter.grades_for(current_student).count > 1
+  - if presenter.scores_for(current_student).count > 1
     %br
     %h4.bold Grade Distribution
-    .grades_per_assign{ "data-scores" => presenter.grades_for(current_student).to_json, :style => "width: 200px" }
+    .grades_per_assign{ "data-scores" => presenter.scores_for(current_student).to_json, :style => "width: 200px" }
 
   %h4.bold Participants
   #numberComplete{:"data-type" => "full", "data-info" => "#{term_for :students} Participated", "data-percent" => "#{presenter.assignment.completion_rate(current_course)}", "data-fgcolor" => "#61a9dc", "data-bgcolor" => "#333333", "data-text" => "#{presenter.assignment.grade_count}", "data-dimension" => "225", "data-fontsize" => "48", "data-border" => "#222222", "data-bordersize" => "2"   }
